--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.2.3",
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
